--- a/content/css/style.css
+++ b/content/css/style.css
@@ -49,21 +49,33 @@ body {
       height: 3px;
       margin: 0 auto; }
     #menu #navbarSupportedContent .navbar-nav .nav-item:hover {
-      color: #009e66; }
+      color: #009e66;
+                    /*@media (min-width: 768px) {
+                        &:after {
+                            width: 80px;
+                            left: 4px;
+                        }
+
+                        &:after:nth-child(3) {
+                            width: 60px;
+                        }
+
+
+                    }*/ }
       #menu #navbarSupportedContent .navbar-nav .nav-item:hover:after {
-        width: 80px; }
+        width: 0px; }
       #menu #navbarSupportedContent .navbar-nav .nav-item:hover:after:nth-child(3) {
-        width: 60px; }
-      @media (min-width: 992px) {
-        #menu #navbarSupportedContent .navbar-nav .nav-item:hover:after {
-          left: 8px;
-          width: 84%; } }
+        width: 0px; }
       #menu #navbarSupportedContent .navbar-nav .nav-item:hover .nav-link {
         color: #009e66; }
-    #menu #navbarSupportedContent .navbar-nav .nav-item:hover:nth-child(2n+2) {
-      color: #009e66; }
-      #menu #navbarSupportedContent .navbar-nav .nav-item:hover:nth-child(2n+2):after {
-        width: 60px; }
+      @media (min-width: 768px) {
+        #menu #navbarSupportedContent .navbar-nav .nav-item:hover:after {
+          left: 8px;
+          width: 84%; }
+        #menu #navbarSupportedContent .navbar-nav .nav-item:hover:hover:nth-child(2n+2) {
+          color: #009e66; }
+          #menu #navbarSupportedContent .navbar-nav .nav-item:hover:hover:nth-child(2n+2):after {
+            width: 62px; } }
   #menu .navbar-toggler {
     width: 50px; }
     #menu .navbar-toggler:focus {
@@ -102,7 +114,31 @@ body {
       transform: translateY(-50%) rotate(-45deg); }
   #menu .navbar-brand__img {
     width: 120px; }
+  @media (max-width: 767.98px) {
+    #menu #navbarSupportedContent .navbar-nav {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      flex-wrap: wrap; }
+      #menu #navbarSupportedContent .navbar-nav .nav-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 130px;
+        height: 45px;
+        border: 1px solid rgba(0, 158, 102, 0.3);
+        margin: 5px;
+        border-radius: 20px;
+        background-color: rgba(22, 22, 22, 0.7);
+        transition: all .7s; }
+        #menu #navbarSupportedContent .navbar-nav .nav-item:hover {
+          background-color: #161616;
+          border: 1px solid #009e66; } }
 
+@media (max-width: 380px) {
+  #menu {
+    padding: 30px 10px; } }
 /*#endregion */
 /*#region home */
 #home {
@@ -327,6 +363,7 @@ body {
   border-left: 4px solid #009e66;
   background-color: #161616; }
   #resume .col-wrapper .col-box {
+    border-bottom: 1px solid rgba(159, 159, 159, 0.3);
     padding: 40px 0px 40px 40px;
     position: relative; }
     #resume .col-wrapper .col-box__title {
@@ -348,7 +385,7 @@ body {
         color: #9f9f9f; }
     #resume .col-wrapper .col-box:before {
       position: absolute;
-      top: 52px;
+      top: 47px;
       left: 0;
       content: "";
       background-color: #009e66;
@@ -356,15 +393,13 @@ body {
       height: 15px; }
     #resume .col-wrapper .col-box:after {
       position: absolute;
-      top: 52px;
+      top: 47px;
       left: 18px;
       content: "";
       border-left: #009e66;
       border-style: solid;
       border-color: transparent transparent transparent #009e66;
       border-width: 7.5px; }
-  #resume .col-wrapper .col-box:last-child {
-    border-top: 1px solid rgba(159, 159, 159, 0.3); }
   #resume .col-wrapper .col-box.not-icon .col-box__title {
     color: #f0f0f0; }
   #resume .col-wrapper .col-box.not-icon .col-box__content__item {
@@ -574,6 +609,10 @@ body {
     transition: all .5s; }
   .back-top:hover .back-top__icon {
     transform: rotate(180deg); }
+  @media (max-width: 575.98px) {
+    .back-top {
+      top: 50px;
+      right: 25px; } }
 
 /*#endregion */
 /*#region scrollbar */
