--- a/content/css/style.css
+++ b/content/css/style.css
@@ -19,6 +19,12 @@ body {
   body:focus {
     background-color: #009e66; }
 
+.selection_bubble_root {
+  display: none; }
+
+#image_search {
+  display: none; }
+
 /*#endregion */
 /*#region menu */
 #menu {
@@ -134,7 +140,7 @@ body {
         transition: all .7s; }
         #menu #navbarSupportedContent .navbar-nav .nav-item:hover {
           background-color: #161616;
-          border: 1px solid #009e66; } }
+          border: 2px solid #009e66; } }
 
 @media (max-width: 380px) {
   #menu {
@@ -220,15 +226,19 @@ body {
     text-align: center;
     margin-bottom: 40px; }
     #about .box-img img {
-      border-radius: 50%;
-      width: 200px;
-      height: 200px; }
+      border-radius: 10px;
+      border: 2px solid #e6e6e6;
+      width: 180px; }
   @media (min-width: 992px) {
     #about .box-img {
-      margin-bottom: 0; }
+      width: 100%;
+      height: 100%;
+      margin-bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
       #about .box-img img {
-        border-radius: 0;
-        width: 100%;
+        width: 70%;
         height: auto; } }
   #about .about-content .box-text-about__sub {
     color: #009e66;
@@ -378,11 +388,11 @@ body {
       flex-direction: row;
       align-items: center;
       padding: 5px 0; }
-      #resume .col-wrapper .col-box__content__item div:first-child {
-        color: #f0f0f0; }
-      #resume .col-wrapper .col-box__content__item div:last-child {
-        margin-left: 20px;
+      #resume .col-wrapper .col-box__content__item div {
         color: #9f9f9f; }
+        #resume .col-wrapper .col-box__content__item div i {
+          margin-right: 5px;
+          color: #f0f0f0; }
     #resume .col-wrapper .col-box:before {
       position: absolute;
       top: 47px;
@@ -404,10 +414,11 @@ body {
     color: #f0f0f0; }
   #resume .col-wrapper .col-box.not-icon .col-box__content__item {
     list-style-type: none; }
-    #resume .col-wrapper .col-box.not-icon .col-box__content__item div:first-child {
-      color: #f0f0f0; }
-    #resume .col-wrapper .col-box.not-icon .col-box__content__item div:last-child {
+    #resume .col-wrapper .col-box.not-icon .col-box__content__item div {
       color: #9f9f9f; }
+      #resume .col-wrapper .col-box.not-icon .col-box__content__item div span {
+        margin-right: 5px;
+        color: #f0f0f0; }
 #resume .skills {
   padding: 80px 0; }
   #resume .skills-heading__sub {
@@ -446,13 +457,13 @@ body {
   #resume .skills .skills-content.skills-content--first .skills-content-list .skills-content-list-item:nth-child(2) .skills-content-list-item-progress .skills-content-list-item-progress__bar {
     width: 80%; }
   #resume .skills .skills-content.skills-content--first .skills-content-list .skills-content-list-item:nth-child(3) .skills-content-list-item-progress .skills-content-list-item-progress__bar {
-    width: 60%; }
+    width: 50%; }
   #resume .skills .skills-content.skills-content--last .skills-content-list .skills-content-list-item:nth-child(1) .skills-content-list-item-progress .skills-content-list-item-progress__bar {
     width: 70%; }
   #resume .skills .skills-content.skills-content--last .skills-content-list .skills-content-list-item:nth-child(2) .skills-content-list-item-progress .skills-content-list-item-progress__bar {
     width: 60%; }
   #resume .skills .skills-content.skills-content--last .skills-content-list .skills-content-list-item:nth-child(3) .skills-content-list-item-progress .skills-content-list-item-progress__bar {
-    width: 70%; }
+    width: 60%; }
 
 /*#endregion */
 /*#region product */
@@ -463,19 +474,22 @@ body {
     margin: 20px 0; }
     #product .product-content-item__title {
       color: #f0f0f0;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      transition: all .5s; }
     #product .product-content-item-img {
       width: 100%;
       border: 2px solid #009e66;
       border-radius: 5px;
       overflow: hidden;
       margin: 0 auto; }
-      #product .product-content-item-img__img {
+      #product .product-content-item-img__link img {
         width: 100%;
         height: 100%;
         transition: all 1s; }
-      #product .product-content-item-img:hover .product-content-item-img__img {
-        transform: scale(1.2); }
+    #product .product-content-item:hover .product-content-item__title {
+      color: #009e66; }
+    #product .product-content-item:hover .product-content-item-img__link img {
+      transform: scale(1.2); }
     @media (min-width: 992px) {
       #product .product-content-item-img {
         width: 80%; } }
