--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -247,6 +247,7 @@ body {
                     position: relative;
                     font-family: 'Lobster', cursive;
                     text-align: center;
+                    color: rgba($colorGreenMain, 1);
                     .typewrite {
                         font-size: 24px;
                         &:hover {
